Adjust requirements dropdown to prevent 0 from being chosen cuz it break the deivision for progress bar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -83,7 +83,10 @@ font-size: 1em;
  .user_container{
    justify-content: center;
  }
-
+.edit_container{
+  display: flex;
+  flex-direction: column;
+}
 
 .single_app, .app_bottom{
    border: 1px solid #e6e6e6;
@@ -94,6 +97,10 @@ font-size: 1em;
  }
  .app_bottom{
    min-height: 0;
+ }
+
+ .center_in_flex{
+   flex: 0 1 auto;
  }
 
 
